--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.ctf.kartochki2">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,9 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ctfkartochki2android">
-        <activity android:name=".MainActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/Theme.Ctfkartochki2android.NoActionBar">
+        <activity
+            android:name=".LicenseActivity"
+            android:theme="@style/Theme.Ctfkartochki2android.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.Ctfkartochki2android.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
