--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:theme="@style/Theme.Ctfkartochki2android.NoActionBar"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
